-
Type:
Bug
-
Resolution: Fixed
-
Priority:
Major - P3
-
Affects Version/s: None
-
Fully Compatible
-
ALL
-
Security 2020-10-05
-
None
-
None
-
None
-
None
-
None
-
None
-
None
Uninitialized scalar field
The field will contain an arbitrary value left over from earlier computations. A scalar field is not initialized by the constructor
/src/mongo/db/modules/enterprise/src/encryptdb/keystore.cpp:73: UNINIT_CTOR 112490 Class member declaration for "rolloverId".
/src/mongo/db/modules/enterprise/src/encryptdb/keystore.cpp:62: UNINIT_CTOR 112490 Non-static class member "rolloverId" is not initialized in this constructor nor in any functions that it calls.