SERVER-50810 Pass rolloverId to KeystoreRecordViewV1 ctor

GitOrigin-RevId: bb3af5ea10ae3296c0ea0021f619d99b6e1cfac3